--- a/index.html
+++ b/index.html
@@ -15,22 +15,18 @@
             max-height: 100vh;
             margin: auto;
         }
+        ::selection {
+          color: #ffffff;
+        }
       </style>
 
     <title>MUMBLECRAP</title>
 
   </head>
-  <body>
+  <body style="background-color:black;">
     <div class="imgbox">
-        <img class="center-fit" src="https://drive.google.com/uc?export=view&id=1GZW_UnNy1DgJ4hve3spLTEdrB-1pShok" alt="MUMBLECRAP">
-    </div>
-    <br>
-    <div class="imgbox">
-        <img class="center-fit" src="https://drive.google.com/uc?export=view&id=10MR9bXeXK_5OzjjNc2bqsy0Vyr8Ouifu" alt="MUMBLECRAP">
-    </div>
-    <br>
-    <div class="imgbox">
-      <img class="center-fit" src="https://drive.google.com/uc?export=view&id=1w4Dtm0f64o96ldnKOnflRXyJZKmSkgjv">
+      <img class="center-fit" src="https://drive.google.com/uc?export=view&id=1mJnL6HqvudfBhakYTZKsiPI9jrB4E7IM">
     </div>
   </body>
+</html>
 </html>
