--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             margin: auto;
         }
         ::selection {
-          color: #ffffff;
+          background-color: #ffffff;
         }
       </style>
 
@@ -25,8 +25,10 @@
   </head>
   <body style="background-color:black;">
     <div class="imgbox">
-      <img class="center-fit" src="https://drive.google.com/uc?export=view&id=1mJnL6HqvudfBhakYTZKsiPI9jrB4E7IM">
+      <img class="center-fit" src="https://drive.google.com/uc?export=view&id=1mJnL6HqvudfBhakYTZKsiPI9jrB4E7IM" alt="MUMBLECRAP">
     </div>
+    <br>
+    <div class="imgbox">
+      <img class="center-fit" src="https://drive.google.com/uc?export=view&id=1LX9IiZ75zws4pBsOSC9dAZAXm3Ss_FnY" alt="WHAT IS THIS?">
   </body>
-</html>
 </html>
